--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Catalog</title>
     <link rel="stylesheet" href="style/catalog.css">
+    <link rel="stylesheet" href="style/carousel.css">
+    <link rel="stylesheet" href="style/grid.css">
     <!-- CSS only -->
 <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">-->
 
@@ -50,140 +52,161 @@
             </div>
         </div>
     </header>
+    <section class="carousel-section">
+        <div class="container">
+            <div class="carousel">
+                <div class="carousel_item">
+                    <h2 class="carousel_item-title">The Universe Though A Child s Eyes</h2>
+                    <div class="carousel_item-text">
+                        <p>Start sales</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="intro1">
-        <div class="container_catalog">
+        <div class="container">
             <div class="intro_catalog">
                 <div class="intro_text">
                     <H1 class="intro_title1">eyelash extension materials</H1>
                 </div>
                 <div class="catalog_photo">
                     <div class="header_button">
-
                     </div>
-                    <img class="photo" src="img/catalog.jpg" width="450" height="390">
+                    <img class="photo" src="img/photo4.png" width="520" height="290">
                 </div>
             </div>
         </div>
     </div>
-    <div class="container_catalog">
-        <main class="main_content">
-            <div class="container_main">
-                <div class="main_row">
-                    <div class="main_column-left">
-                        <nav class="navigation">
-                            <ul class="navigation_list">
-                                <li class="navigation_item">
-                                    <div class="navigation_item_title">
-                                        Eyelashes
-                                    </div>
-                                    <div class="navigation_item_arrow">
-                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
-                                    </div>
-                                </li>
-                                <li class="navigation_item">
-                                    <div class="navigation_item_title">
-                                        Eyebrows
-                                    </div>
-                                    <div class="navigation_item_arrow">
-                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
-                                    </div>
-                                </li>
-                                <li class="navigation_item">
-                                    <div class="navigation_item_title">
-                                        Tools
-                                    </div>
-                                    <div class="navigation_item_arrow">
-                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
-                                    </div>
-                                </li>
-                                <li class="navigation_item">
-                                    <div class="navigation_item_title">
-                                        Accessories
-                                    </div>
-                                    <div class="navigation_item_arrow">
-                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
-                                    </div>
-                                </li>
-                                <li class="navigation_item">
-                                    <div class="navigation_item_title">
-                                        Eyelash care
-                                    </div>
-                                    <div class="navigation_item_arrow">
-                                        <img class=">" src="img/background/>>>>>>>>>>>.png" width="20" height="20">
-                                    </div>
-                                </li>
-                            </ul>
-                        </nav>
-                        <aside class="info-block">
-                            <div class="info-block_title">
-                                Advertising
-                            </div>
-                            <div class="info-block_subtitle">
-                                Only for you
-                            </div>
-                        </aside>
-                    </div>
-                    <div class="main_column-right">
-                        <div class="tabs">
-                            <button class="tabs_btn"> Most Popular</button>
-                            <button class="tabs_btn">The Cheapest</button>
+    <main class="main_content">
+        <div class="container">
+            <div class="main_row">
+                <div class="main_column-left">
+                    <nav class="navigation">
+                        <ul class="navigation_list">
+                            <li class="navigation_item">
+                                <div class="navigation_item-icon">
+                                    <img class=">" src="img/background/unnamed1.jpeg" width="25" height="25">
+                                </div>
+                                <div class="navigation_item_title">
+                                    Eyelashes
+                                </div>
+                                <div class="navigation_item_arrow">
+                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                </div>
+                            </li>
+                            <li class="navigation_item">
+                                <div class="navigation_item-icon">
+                                    <img class=">" src="img/background/unnamed1.jpeg" width="25" height="25">
+                                </div>
+                                <div class="navigation_item_title">
+                                    Eyebrows
+                                </div>
+                                <div class="navigation_item_arrow">
+                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                </div>
+                            </li>
+                            <li class="navigation_item">
+                                <div class="navigation_item-icon">
+                                    <img class=">" src="img/background/unnamed1.jpeg" width="25" height="25">
+                                </div>
+                                <div class="navigation_item_title">
+                                    Tools
+                                </div>
+                                <div class="navigation_item_arrow">
+                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                </div>
+                            </li>
+                            <li class="navigation_item">
+                                <div class="navigation_item-icon">
+                                    <img class=">" src="img/background/unnamed1.jpeg" width="25" height="25">
+                                </div>
+                                <div class="navigation_item_title">
+                                    Accessories
+                                </div>
+                                <div class="navigation_item_arrow">
+                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                </div>
+                            </li>
+                            <li class="navigation_item">
+                                <div class="navigation_item-icon">
+                                    <img class=">" src="img/background/unnamed1.jpeg" width="25" height="25">
+                                </div>
+                                <div class="navigation_item_title">
+                                    Eyelash care
+                                </div>
+                                <div class="navigation_item_arrow">
+                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                </div>
+                            </li>
+                        </ul>
+                    </nav>
+                    <aside class="info-block">
+                        <div class="info-block_title">
+                            Advertising
                         </div>
-                        <div class="cards-wrapper">
-                            <div class="card_header">
-                                <div class="title">New Products</div>
-                                <div class="subtitle">dolor sit amet</div>
+                        <div class="info-block_subtitle">
+                            Only for you
+                        </div>
+                    </aside>
+                </div>
+                <div class="main_column-right">
+                    <div class="tabs">
+                        <button class="tabs_btn"> Most Popular</button>
+                        <button class="tabs_btn">The Cheapest</button>
+                    </div>
+                    <div class="cards-wrapper">
+                        <div class="card_header">
+                            <div class="title">New Products</div>
+                            <div class="subtitle">dolor sit amet</div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card_image">
+                                        <img src="img/kodi/kodi.jpg" alt"">
+                                    </div>
+                                    <div class="card_title">Kodi</div>
+                                    <div class="card_price">
+                                        <span1>$100.00</span1>
+                                        $95.00
+                                    </div>
+                                </div>
                             </div>
-
-                            <div class="row">
-                                <div class="col-md-3">
-                                    <div class="card">
-                                        <div class="card_image">
-                                            <img src="img/kodi/kodi.jpg" alt"">
-                                        </div>
-                                        <div class="card_title">Kodi</div>
-                                        <div class="card_price">
-                                            <span1>$100.00</span1>
-                                            $95.00
-                                        </div>
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card_image">
+                                        <img src="img/kodi/goldCG-200x280.jpg" alt"">
+                                    </div>
+                                    <div class="card_title">Kodi</div>
+                                    <div class="card_price">
+                                        <span1>$100.00</span1>
+                                        $95.00
                                     </div>
                                 </div>
-
-                                <div class="col-md-3">
-                                    <div class="card">
-                                        <div class="card_image">
-                                            <img src="img/kodi/goldCG-200x280.jpg" alt"">
-                                        </div>
-                                        <div class="card_title">Kodi</div>
-                                        <div class="card_price">
-                                            <span1>$100.00</span1>
-                                            $95.00
-                                        </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card_image">
+                                        <img src="img/kodi/creativCG-200x280.jpg" alt"">
+                                    </div>
+                                    <div class="card_title">Kodi</div>
+                                    <div class="card_price">
+                                        <span1>$100.00</span1>
+                                        $95.00
                                     </div>
                                 </div>
-
-                                <div class="col-md-3">
-                                    <div class="card">
-                                        <div class="card_image">
-                                            <img src="img/kodi/creativCG-200x280.jpg" alt"">
-                                        </div>
-                                        <div class="card_title">Kodi</div>
-                                        <div class="card_price">
-                                            <span1>$100.00</span1>
-                                            $95.00
-                                        </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card_image">
+                                        <img src="img/kodi/kodi.jpg" alt"">
                                     </div>
-                                </div>
-
-                                <div class="col-md-3">
-                                    <div class="card">
-                                        <div class="card_image">
-                                            <img src="img/kodi/kodi.jpg" alt"">
-                                        </div>
-                                        <div class="card_title">Kodi</div>
-                                        <div class="card_price">
-                                            <span1>$100.00</span1>
-                                            $95.00
-                                        </div>
+                                    <div class="card_title">Kodi</div>
+                                    <div class="card_price">
+                                        <span1>$100.00</span1>
+                                        $95.00
                                     </div>
                                 </div>
                             </div>
@@ -191,8 +214,8 @@
                     </div>
                 </div>
             </div>
-        </main>
-    </div>
+        </div>
+    </main>
     <div class="footer">
         <span>
             <p>Kiev. str. Tarasa Shevchenko 35</p>
