--- a/catalog.html
+++ b/catalog.html
@@ -151,17 +151,57 @@
                     </aside>
                 </div>
                 <div class="main_column-right">
-                    <div class="tabs">
-                        <button class="tabs_btn"> Most Popular</button>
-                        <button class="tabs_btn">The Cheapest</button>
-                    </div>
                     <div class="cards-wrapper">
                         <div class="card_header">
-                            <div class="title">New Products</div>
-                            <div class="subtitle">dolor sit amet</div>
-                        </div>
-
                         <div class="row">
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card_image">
+                                        <img src="img/kodi/kodi.jpg" alt"">
+                                    </div>
+                                    <div class="card_title">Kodi</div>
+                                    <div class="card_price">
+                                        <span1>$100.00</span1>
+                                        $95.00
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card_image">
+                                        <img src="img/kodi/goldCG-200x280.jpg" alt"">
+                                    </div>
+                                    <div class="card_title">Kodi</div>
+                                    <div class="card_price">
+                                        <span1>$100.00</span1>
+                                        $95.00
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card_image">
+                                        <img src="img/kodi/creativCG-200x280.jpg" alt"">
+                                    </div>
+                                    <div class="card_title">Kodi</div>
+                                    <div class="card_price">
+                                        <span1>$100.00</span1>
+                                        $95.00
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="card">
+                                    <div class="card_image">
+                                        <img src="img/kodi/kodi.jpg" alt"">
+                                    </div>
+                                    <div class="card_title">Kodi</div>
+                                    <div class="card_price">
+                                        <span1>$100.00</span1>
+                                        $95.00
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-md-3">
                                 <div class="card">
                                     <div class="card_image">
