--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Lashmaker</title>
     <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/conteiner.css">
 </head>
 <body>
     <header class="header">
@@ -15,7 +16,7 @@
                 <nav class="nav">
                     <a class="nav_link" href="#">Home</a>
                     <a class="nav_link" href="catalog.html">Catalog</a>
-                    <a class="nav_link" href="#">News</a>
+                    <a class="nav_link" href="news.html">News</a>
                     <a class="nav_link" href="#">Contacts</a>
                 </nav>
             </div>
@@ -28,7 +29,7 @@
                     <p class="intro_subtitle">
                         „Люди могут простить человеку ум, даже талант, но красоту — никогда.“<br>
                         Моника Беллуччи
-                    </p>
+                    </p>   
             </div>
         </div>
     </div>
