--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style/catalog.css">
     <link rel="stylesheet" href="style/carousel.css">
     <link rel="stylesheet" href="style/grid.css">
+    <link rel="stylesheet" href="style/gridInfoclas.css">
+
     <!-- CSS only -->
 <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">-->
 
@@ -153,100 +155,101 @@
                 <div class="main_column-right">
                     <div class="cards-wrapper">
                         <div class="card_header">
-                        <div class="row">
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card_image">
-                                        <img src="img/kodi/kodi.jpg" alt"">
-                                    </div>
-                                    <div class="card_title">Kodi</div>
-                                    <div class="card_price">
-                                        <span1>$100.00</span1>
-                                        $95.00
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card_image">
-                                        <img src="img/kodi/goldCG-200x280.jpg" alt"">
-                                    </div>
-                                    <div class="card_title">Kodi</div>
-                                    <div class="card_price">
-                                        <span1>$100.00</span1>
-                                        $95.00
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img/kodi/kodi.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card_image">
-                                        <img src="img/kodi/creativCG-200x280.jpg" alt"">
-                                    </div>
-                                    <div class="card_title">Kodi</div>
-                                    <div class="card_price">
-                                        <span1>$100.00</span1>
-                                        $95.00
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card_image">
-                                        <img src="img/kodi/kodi.jpg" alt"">
-                                    </div>
-                                    <div class="card_title">Kodi</div>
-                                    <div class="card_price">
-                                        <span1>$100.00</span1>
-                                        $95.00
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img/kodi/goldCG-200x280.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card_image">
-                                        <img src="img/kodi/kodi.jpg" alt"">
-                                    </div>
-                                    <div class="card_title">Kodi</div>
-                                    <div class="card_price">
-                                        <span1>$100.00</span1>
-                                        $95.00
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card_image">
-                                        <img src="img/kodi/goldCG-200x280.jpg" alt"">
-                                    </div>
-                                    <div class="card_title">Kodi</div>
-                                    <div class="card_price">
-                                        <span1>$100.00</span1>
-                                        $95.00
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img/kodi/creativCG-200x280.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card_image">
-                                        <img src="img/kodi/creativCG-200x280.jpg" alt"">
-                                    </div>
-                                    <div class="card_title">Kodi</div>
-                                    <div class="card_price">
-                                        <span1>$100.00</span1>
-                                        $95.00
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img/kodi/kodi.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="card">
-                                    <div class="card_image">
-                                        <img src="img/kodi/kodi.jpg" alt"">
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img/kodi/kodi.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
                                     </div>
-                                    <div class="card_title">Kodi</div>
-                                    <div class="card_price">
-                                        <span1>$100.00</span1>
-                                        $95.00
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img/kodi/goldCG-200x280.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img/kodi/creativCG-200x280.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="card">
+                                        <div class="card_image">
+                                            <img src="img/kodi/kodi.jpg" alt"">
+                                        </div>
+                                        <div class="card_title">Kodi</div>
+                                        <div class="card_price">
+                                            <span1>$100.00</span1>
+                                            $95.00
+                                        </div>
                                     </div>
                                 </div>
                             </div>
