--- a/news.html
+++ b/news.html
@@ -2,39 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style/news.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet"> 
-    <title>News
-    </title>
+    <title>News</title>
+    <link rel="stylesheet" href=" ">
+    <link rel="stylesheet" href="style/select.css">
 </head>
 <body>
     <header class="header">
-        <div class="header_conteiner">
-            <div class="header_logo">
-                <img src="img/background/logo.png" alt="" height="75">
-            </div>
-            <div class="header_search">
-                <div class="header_search_input-wrapper">
-                    <input class="header_search_input" type="text" placeholder="Search goods"/>
+        <div class="container">
+            <div class="header_inner">
+                <div class="header_logo">
+                    <img src="img/background/logo.png" alt="logo">
                 </div>
-                <div class="header_search_dropdown">
-                    <select name="" id="">
-                        <option value="">CATEGORY</option>
-                        <option value="">EYELASHES</option>
-                        <option value="">EYEBROWS</option>
-                        <option value="">COUCH</option>
-                    </select>
+                <div class="nav">
+                    <a class="nav_link" href="index.html">Home</a>
+                    <a class="nav_link" href="#">Contacts</a>
+                    <a class="nav_link" href="catalog.html">Catalog</a>
+                    <a class="nav_link" href="news.html">News</a>
                 </div>
-                <div class="header_search_button">
-                    <button type="submit">
-                        <img src="img/background/lypa.png">
-                    </button>
-                </div>
-            </div>
-            <div class="header_buttons">
-
             </div>
         </div>
     </header>
+    <div class="intro">
+        
+    </div>
 </body>
 </html>
