--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div class="works_item">
-            <img class="works_photo" src="img/photo1.jpg">
+            <img class="works_photo" src="img/catalog.jpg">
             <div class="works_content">
                 <div class="works_title">My Work</div>
                 <div class="works_text">Объем (3-d)</div>
