--- a/catalog.html
+++ b/catalog.html
@@ -40,17 +40,17 @@
                     </div>
                     <div class="header_search-button-wrapper">
                         <button class="header_search-button" type="submit">
-                            <img src="img/background/lypa.png" alt="">
+                            <img src="img/icon/lypa.png" alt="">
                         </button>
                     </div>
                 </div>
                 <div class="header_links">
                     <div class="header_link--notify">
-                        <div class="header-link_icon"><img src="img/background/bask.png" alt="Cart"></div>
+                        <div class="header-link_icon"><img src="img/icon/bask.png" alt="Cart"></div>
                         <div class="header-link_text">Cart</div>
                     </div>
                     <div class="header_link--notify">
-                        <div class="header-link_icon"><img src="img/background/cepdce.png" alt="Wish List" height="32" width="32"></div>
+                        <div class="header-link_icon"><img src="img/icon/cepdce.png" alt="Wish List" height="32" width="32"></div>
                         <div class="header-link_text">Wish List</div>
                     </div>
                 </div>
@@ -66,10 +66,13 @@
                         </a>
                     </div>
                     <div class="header-nav-deals">
-
+                        <a href="#" class="header-nav-link">Super Deals</a>
+                        <a href="#" class="header-nav-link">Featured Brands</a>
+                        <a href="#" class="header-nav-link">Collection</a>
+                        <a href="#" class="header-nav-link">Bestselling</a>
                     </div>
                     <div class="header-nav-select">
-
+                        <div data-select-title class="header_select_title">CATEGORY</div>
                     </div>
                 </nav>
             </div>
@@ -115,7 +118,7 @@
                                     Eyelashes
                                 </div>
                                 <div class="navigation_item_arrow">
-                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                    <img class=">" src="img/icon/>>>>>>>>>>>.png" width="15" height="15">
                                 </div>
                             </li>
                             <li class="navigation_item">
@@ -126,7 +129,7 @@
                                     Eyebrows
                                 </div>
                                 <div class="navigation_item_arrow">
-                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                    <img class=">" src="img/icon/>>>>>>>>>>>.png" width="15" height="15">
                                 </div>
                             </li>
                             <li class="navigation_item">
@@ -137,7 +140,7 @@
                                     Tools
                                 </div>
                                 <div class="navigation_item_arrow">
-                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                    <img class=">" src="img/icon/>>>>>>>>>>>.png" width="15" height="15">
                                 </div>
                             </li>
                             <li class="navigation_item">
@@ -148,7 +151,7 @@
                                     Accessories
                                 </div>
                                 <div class="navigation_item_arrow">
-                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                    <img class=">" src="img/icon/>>>>>>>>>>>.png" width="15" height="15">
                                 </div>
                             </li>
                             <li class="navigation_item">
@@ -159,7 +162,7 @@
                                     Eyelash care
                                 </div>
                                 <div class="navigation_item_arrow">
-                                    <img class=">" src="img/background/>>>>>>>>>>>.png" width="15" height="15">
+                                    <img class=">" src="img/icon/>>>>>>>>>>>.png" width="15" height="15">
                                 </div>
                             </li>
                         </ul>
