name and gender and alert

--- a/news.html
+++ b/news.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>News</title>
-    <link rel="stylesheet" href=" ">
-    <link rel="stylesheet" href="style/select.css">
+    <link rel="stylesheet" href="style/news.css">
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="header_inner">
-                <div class="header_logo">
-                    <img src="img/background/logo.png" alt="logo">
-                </div>
-                <div class="nav">
-                    <a class="nav_link" href="index.html">Home</a>
-                    <a class="nav_link" href="#">Contacts</a>
-                    <a class="nav_link" href="catalog.html">Catalog</a>
-                    <a class="nav_link" href="news.html">News</a>
-                </div>
-            </div>
+    <div id ="myID" class="header">HELLO KIRIL</div> 
+    <div class="conteiner">
+        <div class="left">
+            <h1 class="text-center">AddEventListener></h1>
+            <h2>Hello</h2>
         </div>
-    </header>
-    <div class="intro">
-        
     </div>
 
-    <script src="js/news.js/"></script>
+        <div class="works_item">
+            <img class="works_photo" src="img/photo7.jpg">
+            <div class="works_content">
+                <div class="works_title">My Work</div>
+                <div class="works_text">Объем (2-d)</div>
+            </div>
+        </div>
+
+        
+        <div class="input_obj">
+            <input name="name" id="elem1" type="text" placeholder="Name" />
+            <input age="age" type="number" placeholder="Age" />
+            <select name="" id="gender">
+                <option value="boy">boy</option>
+                <option value="girl">girl</option>
+            </select>
+            <br>
+            <button class="status-btn">Who are you?</button>
+            <br> YOU
+            <span class="status"></span>
+        </div>
+
+
+    <script src="js/news.js"></script>
 </body>
 </html>
