--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style/headerNav.css">
     <link rel="stylesheet" href="style/carousel.css">
     <link rel="stylesheet" href="style/grid.css">
-    <link rel="stylesheet" href="style/carousel-theme.css">
-    <link rel="stylesheet" href="/libs/owl-carousel/assets/owl.carousel.min.css">
+    <!-- <link rel="stylesheet" href="style/carousel-theme.css">
+    <link rel="stylesheet" href="/libs/owl-carousel/assets/owl.carousel.min.css"> -->
+
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
@@ -300,7 +301,7 @@
             <p>index 85300</p>
         </span>
     </div>
-    <script src="libs//owl-carousel/owl.carousel.min.js"></script>
+    <!-- <script src="libs/owl-carousel/owl.carousel.min.js"></script> -->
     <script src="js/catalog.js"></script>
     <script src="js/main.js"></script>
 </body>
